--- a/Report/uu_cern_thesis_report.tex
+++ b/Report/uu_cern_thesis_report.tex
@@ -1,22 +1,33 @@
 \documentclass[12pt]{article}
 
+% Packages
 \usepackage{float}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{subcaption}
 \usepackage{graphicx}
-\graphicspath{ {./images/} }
-
 \usepackage{listingsutf8}
 \usepackage[utf8]{inputenc}
-
 \usepackage{xcolor}
+\usepackage[a4paper, total={16cm, 23.7cm}]{geometry}
+\usepackage[colorlinks=true,urlcolor=blue]{hyperref}
+\usepackage{color}
+
+% Compiler/IDE directives
+% !TeX spellcheck = en_US
+
+% General
+\fontfamily{phv}
+\captionsetup{width=0.8\textwidth}
+
+% Graphicx
+\graphicspath{ {./images/} }
  
+% Listings
 \definecolor{codegreen}{rgb}{0,0.6,0}
 \definecolor{codegray}{rgb}{0.5,0.5,0.5}
 \definecolor{codepurple}{rgb}{0.58,0,0.82}
-\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
- 
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92} 
 \lstdefinestyle{mystyle}{
     backgroundcolor=\color{backcolour},   
     commentstyle=\color{codegreen},
@@ -37,28 +48,23 @@
 }
 \lstset{style=mystyle}
 
-\usepackage[a4paper, total={16cm, 23.7cm}]{geometry}
+% Geometry
 \DeclareMathSizes{12}{13}{10}{8}
 \setlength\parindent{0.7cm}
 
-\usepackage[colorlinks=true,urlcolor=blue]{hyperref}
-\usepackage{color}
-
+% Helper commands
 \newcommand*\diff{\mathop{}\!\mathrm{d}}
 \newcommand*\Diff[1]{\mathop{}\!\mathrm{d^#1}}
 \newcommand\tab[1][.7cm]{\hspace*{#1}}
 \renewcommand{\refname}{}
-
-\captionsetup{width=0.8\textwidth}
-
 \newcommand{\code}[1]{\texttt{#1}}
 
-\fontfamily{phv}
 
-% !TeX spellcheck = en_US
+%----------------------------------------------------------------------------
+% THE DOCUMENT
+%----------------------------------------------------------------------------
+\begin{document}
 
-
-\begin{document}	
 
 %----------------------------------------------------------------------------
 % TITLE
@@ -256,13 +262,13 @@ The pre-upgrade detector does the real-time event processing in two stages. The 
 		\centering
 		\includegraphics[width=.4\linewidth]{LHCb_Trigger_RunII_May2015}
 		\caption{Trigger data flow scheme\\ before the upgrade}
-		\label{fig:sub1}
+		\label{fig_trigger_compare_sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=.4\linewidth]{LHCb_Trigger_RunIII_May2015}
 		\caption{Trigger data flow\\ scheme post-upgrade}
-		\label{fig:sub2}
+		\label{fig_trigger_compare_sub2}
 	\end{subfigure}
 	\caption{Comparison of the two triggering solutions}
 	\label{fig_trigger_compare}
@@ -642,13 +648,13 @@ In addition to performance problems, as the code is not clearly structured, opti
 		\centering
 		\includegraphics[width=.7\linewidth]{velout_gatherhits_orig_uarch}
 		\caption{Microarchitecture usage of gathering\\ hits in the original code}
-		\label{fig:sub1}
+		\label{fig_velout_branch_example_sub1}
 	\end{subfigure}%
 	\begin{subfigure}{.5\textwidth}
 		\centering
 		\includegraphics[width=.7\linewidth]{velout_gatherhits_new_uarch}
 		\caption{Microarchitecture usage of gathering\\ hits in the refurbished code}
-		\label{fig:sub2}
+		\label{fig_velout_branch_example_sub2}
 	\end{subfigure}
 	\caption{Almost 30\% of the instructions go to waste due to CPU branch mispredictions before refurbishing the code. (Illustration, in-depth analysis later.)}
 	\label{fig_velout_branch_example}
@@ -816,9 +822,57 @@ The hit alignment search proved to be impractical to vectorize. The search algor
 
 One average, there are only 2 hits per track per panel, so vectorizing over one member of the pair, the other member of the pair, and the extra hits is not practical. Vectorizing over the tracks if not feasible either, as the number of hits in the four layers can be very different between the track, and branching would ruin the vectorization. Other attempts, such as producing all 3 or 4 hit combinations and then determining if they are on a line is also impractical, as the generation would either be scalar code or inefficient vectorized code.
 
-\subsubsection{Custom memory allocation}
+\subsubsection{Custom memory allocation} \label{sec_velout_stack_alloc}
 
-With the optimized version of the Velo-UT algorithm, 20\% of the computation time was spent with memory allocation. To alleviate this issue, I employed a stack memory allocator. At the beginning of the Velo-UT algorithm, a large chunk of memory is allocated and an offset variable is initialized to zero. Whenever memory needs to be allocated, a pointer into the large chunk at the point indicated by offset is returned, and offset is increased by the size of the new allocation. In case the large chunk runs out, a new one is simply allocated and the offset is reset to zero. At the end of the Velo-UT algorithm, all the chunks that have been allocated are freed. The resulting stack allocator has close to zero overhead.
+With the optimized version of the Velo-UT algorithm, up to 20\% of the computation time was spent with memory allocation. The cost of memory allocation in an application depends most on the number of allocations, not the size of the allocations. Large allocations are much cheaper per byte allocated, so it is worth allocating an array for all objects upfront instead of allocating each object individually. The optimized Velo-UT algorithm uses this technique, however, the SOA data layouts require the allocation of a separate array for each data member of the structure. This combined with the fact that the algorithm generally works on a small amount of data makes memory allocations a significant problem.
+
+\vspace{1pc}
+
+Two options seems straightforward to reduce the number of memory allocations: allocating one large block of memory for all the contents of the SOAs, or use a memory pool instead of turning to the system memory allocator. The latter results in simpler code and make it possible to reuse existing code such as the \code{std::vector}. Additionally, the way I'm implementing SOA containers through code generation with template metaprogramming and \code{std::vector}s, extending my containers with custom allocators like the STL itself is more natural.
+
+\vspace{1pc}
+
+The idea is to have a fast memory pool that it initialized at the beginning of the algorithm and torn down at the end. All memory allocations for the steps in-between are served from the pool instead of the OS memory allocator. This is achieved by initializing all \code{std::vector}s with this memory pool.
+The choice fell on a stack memory allocator.
+
+\vspace{1pc}
+
+The stack memory allocator work by requesting a large chunk of memory upfront from the operating system. A variable which shows the \code{offset} from the beginning of the chunk is initialized to zero.
+
+\begin{figure}[H]
+	\begin{center}
+		\includegraphics[width=\textwidth]{velout_stack_allocator_initial}
+	\end{center}
+	\caption{Initial state of the stack allocator.}
+	\label{fig_velout_stack_allocator_initial}
+\end{figure}
+
+When memory is requested from the pool, a pointer at the current \code{offset} is returned to the caller. Internally, the \code{offset} is incremented by the size of the requested block, plus any padding if necessary.
+
+\begin{figure}[H]
+	\begin{center}
+		\includegraphics[width=\textwidth]{velout_stack_allocator_alloc1}
+	\end{center}
+	\caption{The allocator after the first allocation.}
+	\label{fig_velout_stack_allocator_alloc1}
+\end{figure}
+
+Subsequent allocations are performed similarly.
+
+\begin{figure}[H]
+	\begin{center}
+		\includegraphics[width=\textwidth]{velout_stack_allocator_alloc2}
+	\end{center}
+	\caption{State of the allocator after a second allocation.}
+	\label{fig_velout_stack_allocator_alloc2}
+\end{figure}
+
+Stack allocators are wasteful, because previously requested blocks are never individually deallocated and their memory reused, rather, all the memory is deallocated at once when the memory pool is destroyed. This, however, is not a problem, since the entire Velo-UT algorithm requires about half a megabyte from a stack allocator, which amounts to 20-30 megabytes of memory when running on 40-60 threads simultaneously. That is still negligible compared to more than 32 gigabytes of RAM which these machines are equipped with.
+
+In case the allocator would run out of space, a new empty block is requested from the operating system. Even though this case is handled, the goal is to minimize the number of requests to the OS, so the initial block size is tuned so as to fit all data of the algorithm.
+
+Stack allocators are extremely fast, as all it takes to allocate a new memory block is to return the offset pointer and increment the offset -- a couple of integer arithmetic instructions. Even though with the above extension an if statement handles the special case it runs out of free space, the if rarely ever actually takes this path so the CPU should be hitting near perfect rates for branch prediction.
+
 
 \subsection{Results}
 
@@ -912,9 +966,7 @@ In place of branch prediction, VTune shows the algorithm is core bound. VTune in
 	\label{fig_velout_with_alloc}
 \end{figure}
 
-normal alloc: 34068/33817 ms
-stack alloc: 29115/29483
-
+Figure \ref{fig_velout_without_alloc} shows that without any special memory allocator, the program spends more than 13 percent in memory allocation. (Interestingly, the freeing of memory does not seem to take significant amount of computation.) However, thanks to the stack allocator, this can be reduced to less than 3 percent of the CPU time. The difference shown in the profiler manifests in the runtime as expected: 33.8 seconds with the default allocator compared to 29.1 seconds with the stack allocator, that is a gain of 14\%.
 
 
 \subsubsection{Comparison of Clang and GCC}
